2005-05-27 Magnus Hagdorn
 * CF_loadfile.py: add virtual variable pmp -- pressure melting point of ice
 * CF_profile.py: add switch to show pmp when plotting temps
 * CF_options.py: ditto
 * CF_profilearea.py: optionally plot pmp when plotting temps
 * plotSpot.py: minor bug fix

2005-05-13 Magnus Hagdorn
 * surf_temp.cpt: new colour map for air temperatures
 * CF_colourmap.py: added surf_temp.cpt to list of known colour maps
 * setup.py: install surf_temp.cpt:
 * plot_extent.py: add profiles
 * plotProfileTS.py: plot legend

2005-04-20 Magnus Hagdorn
 * added simple prog for plotting ice extent

2005-04-18 Magnus Hagdorn
 * setup.py: bump version to 0.3
 * CF_area.py: change scaling of linear projections to 10km
 * plotEISvar.py: bug fix
 * plotProfile.py: move plot to right to make space for lables

2005-04-13 Magnus Hagdorn
 * plotCFvar.py: added switch to plot velo glyphs

2005-04-01 Magnus Hagdorn
 * CF_createfile.py: added 'VARSET' to list of non-variables for test.nc file

2005-03-29 Magnus Hagdorn
 * plotCFvar.py: plot velo fields for number of files

2005-03-23 Magnus Hagdorn
 * create_topo.py: fixed bug where the velo grid has the wrong origin
 * CF_loadfile.py: add option to interpolate onto velocity grid
 * CF_area.py: add option to illuminate images to give impression of a 3D surface,
   we also use basal velo fields for vector plots, add illumination to land option,
   fix profile plotting bug
 * CF_options.py: add illumination option, rename spot option to --ij
 * plotCFvar.py: hook up illumination

2005-03-12 Magnus Hagdorn
 * setup.py: bump version to 0.2
 * CF_createfile.py: fix minor bug
 * CF_loadfile.py: add method to clone a CF file

2005-03-12 Magnus Hagdorn
 * CF_diff.py, plotCFdiff.py: minor improvements

2005-03-09 Magnus Hagdorn
 * plotProfileTS.py: add ice extend to plot
 * CF_diff.py: plotting area for displaying difference between two CF files as a time
   series
 * plotCFdiff.py: simple program using CF_diff.py