@@ -1,0 +1,26 @@
+#	cpt file created by: makecpt -Cpolar -I -T-0.1/0.1/0.01
+#COLOR_MODEL = RGB
+#
+-0.1	255	0	0	-0.09	255	0	0
+-0.09	255	25	25	-0.08	255	25	25
+-0.08	255	51	51	-0.07	255	51	51
+-0.07	255	76	76	-0.06	255	76	76
+-0.06	255	102	102	-0.05	255	102	102
+-0.05	255	128	128	-0.04	255	128	128
+-0.04	255	153	153	-0.03	255	153	153
+-0.03	255	178	178	-0.02	255	178	178
+-0.02	255	204	204	-0.01	255	204	204
+-0.01	255	229	229	0	255	229	229
+0	255	255	255	0.01	255	255	255
+0.01	230	230	255	0.02	230	230	255
+0.02	204	204	255	0.03	204	204	255
+0.03	178	178	255	0.04	178	178	255
+0.04	153	153	255	0.05	153	153	255
+0.05	127	127	255	0.06	127	127	255
+0.06	102	102	255	0.07	102	102	255
+0.07	76	76	255	0.08	76	76	255
+0.08	51	51	255	0.09	51	51	255
+0.09	26	26	255	0.1	26	26	255
+B       255     0       0	
+F	26      26      255
+N	128	128	128
