@@ -36,6 +36,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                               'data/surf_temp.cpt',
                               'data/topo.cpt',
                               'data/velo.cpt',
+                              'data/gthf.cpt',
                               'data/eismint2.data']),
               ('bin',['progs/add_projinfo.py',
                       'progs/create_topo.py',
